...
                        }}
                    >
                        <Entypo
                            name={'upload-to-cloud'}
                            size={120}
                        />
                        <Text style={lightFontStyles.regular}>{'Upload'}</Text>
                    </View>
                </Touchable>
            </View>
        );
    }
}
...
